[package]
name = "zoom-tally-rust-poc"
version = "0.1.0"
authors = ["Sam Mesterton-Gibbons <sam@samn.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
etherparse = "0.9.0"
chrono = "0.4.19"
stoppable_thread = "0.2.1"
enclose = "1.1.8"